--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,73 @@
-
+body {
+    background-image: url("../images/background4.jpg");
+    background-size:cover;
+    margin: 0;
+    padding: 0;
+}
 #app {
     padding: 2em;
 }
 #headers {
-    text-align: center
+    text-align: center;
+    padding: 16px;
+    font-family: 'Josefin Sans', sans-serif;
+}
+#headers h1 {
+    font-size: 40px;
+    font-weight: 800;
+    color: #e2316a;
 }
 #main {
   text-align: center;
+  padding: 16px;
+  display: flex;
+  justify-content: center;
 }
-
-input[type="number"] {
-    border: 2px solid #666;
-    border-radius: 50%;
-    width: 150px;
-    height: 150px; 
-}
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
-}
-input::placeholder {
-    color: #666;
-    font-size:  4em;
-    font-style: italic;
+input,
+input::-webkit-input-placeholder {
+    font-size: 50px;
+    color: #e2316a;
+    font-weight: bold;
     text-align: center;
 }
-input[type="submit"] {
-    border: 2px solid #999;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px; 
+#input-parent {
+    position: relative;
+    width: 160px;
 }
+
+#player-input {
+    width: 130px;
+    height: 130px;
+    font-size: 45px;
+    border-radius: 50%;
+}
+#submit {
+    width: 50px;
+    height: 50px;
+    font-size: 12px;
+    border-radius: 50%;
+    background-color: #a5e8f7;
+    position: absolute;
+    top: 90px;
+    left: 90px;
+}
+
+#guesses {
+    display: flex;
+    justify-content: space-evenly;
+}
+ li {
+    display: inline;
+  
+}
+.list-inline-item {
+    border-radius: 5px;
+    border: solid 2px white;
+    font-size: 60px;
+    margin: 10px 20px;
+    background-color: white;
+}
+
 .center {
 text-align: center;
 }
