--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ body {
     font-weight: 800;
     color: #e2316a;
 }
+#headers h2 {
+    font-size: 25px;
+}
 #main {
   text-align: center;
   padding: 16px;
